# pyconverter-xml2py

./: .coveragerc  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  AUTHORS  AUTHORS.md  CNAME  CONTRIBUTING.md  CONTRIBUTORS.md  README.rst  config.yaml  index.html  make_package_doc.ps1  profile_converter.py  pyproject.toml  robots.txt  setup.py  sitemap.xml  test_base_class_feature.py  tox.ini  versions.json  xml2rst.py
.github/: dependabot.yml  labeler.yml
.github/workflows/: autodoc_cicd.yml  ci_cd.yml  label.yml
.reuse/: dep5
_package/: .pre-commit-config.yaml  AUTHORS.md  README.rst  pyproject.toml
_package/customized_functions/: k.py  kdist.py  l2ang.py
_package/doc/: .vale.ini  Makefile  make.bat
_package/doc/source/: conf.py  index.rst
_package/doc/styles/Vocab/ANSYS/: accept.txt
_package/src/pyconverter/generatedcommands/subfolder/subsubfolder/prep7/: explicit_dynamic.py
doc/: .vale.ini  Makefile  make.bat
doc/source/: conf.py  index.rst  links.rst
doc/source/api/: ast_class.rst  ast_functions.rst  autogenerateddirectory.rst  custom_functions.rst  directory_format.rst  download.rst  index.rst  load_xml_doc.rst  oxygen_xml.rst  writer.rst
doc/source/contributing/: index.rst
doc/source/getting_started/: index.rst  objects.rst  source_code.rst
doc/source/getting_started/diags/: diag_directory.rst
doc/source/getting_started/images/diags/: diag_directory.rst  diag_package.rst
doc/source/user_guide/: cli.rst  configuration.rst  configurations.rst  customized_functions.rst  index.rst  objects.rst  source_code.rst
doc/source/user_guide/images/diags/: diag_directory.rst  diag_package.rst
doc/styles/Vocab/ANSYS/: accept.txt
doc/styles/config/vocabularies/ANSYS/: accept.txt
src/ansys/dita/ast/: __init__.py  ast_tree.py  directory_format.py  dita_ast.py  folder_format.py  folder_variables.py  load_xml_doc.py  version_variables.py  writer.py  xml2rst.py
src/ansys/xml/ast/: __init__.py
src/pyconverter/xml2py/: __init__.py  ast_tree.py  cli.py  custom_functions.py  directory_format.py  download.py  formatter.py  load_xml_doc.py  methods.py  utils.py  version_variables.py  writer.py
src/pyconverter/xml2py/utils/: __init__.py  regex_pattern.py  utils.py
src/pydita/ast/: __init__.py  ast_tree.py  custom_functions.py  load_xml_doc.py  specific_functions.py  writer.py
src/pydita_ast/: __init__.py  ast_tree.py  cli.py  custom_functions.py  directory_format.py  load_xml_doc.py  version_variables.py  writer.py
src/pydoc/xml2python/: __init__.py  cli.py  load_xml_doc.py  version_variables.py  writer.py
tests/: conftest.py  test_base_class_feature.py  test_cli.py  test_custom_functions.py  test_directory_format.py  test_folder_format.py  test_load_xml_doc.py  test_metadata.py  test_writer.py  test_xml_ast.py
tests/customized_functions/: cmlist.py  enorm.py  inquire.py  k.py  kdist.py  secmodif.py
version/: index.html
version/0.1/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
version/0.1/_sources/api/: autogenerateddirectory.rst.txt  custom_functions.rst.txt  index.rst.txt  writer.rst.txt
version/0.1/_sources/getting_started/: index.rst.txt
version/0.1/_sources/user_guide/: index.rst.txt  objects.rst.txt
version/0.1/api/: ast_class.html  ast_functions.html  autogenerateddirectory.html  custom_functions.html  directory_format.html  index.html  load_xml_doc.html  oxygen_xml.html  writer.html
version/0.1/api/_autosummary/ast_class/: pydita_ast.ast_tree.BlockQuote.added.html  pydita_ast.ast_tree.BlockQuote.any_isalnum.html  pydita_ast.ast_tree.BlockQuote.children.html  pydita_ast.ast_tree.BlockQuote.content.html  pydita_ast.ast_tree.BlockQuote.find.html  pydita_ast.ast_tree.BlockQuote.find_all.html  pydita_ast.ast_tree.BlockQuote.get.html  pydita_ast.ast_tree.BlockQuote.has_children.html  pydita_ast.ast_tree.BlockQuote.html  pydita_ast.ast_tree.BlockQuote.id.html  pydita_ast.ast_tree.BlockQuote.next_elem.html  (+1334 more)
version/0.1/contributing/: index.html
version/0.1/getting_started/: index.html
version/0.1/user_guide/: index.html  objects.html  source_code.html
version/0.1/user_guide/images/: announcement.html
version/0.2/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
version/0.2/_sources/api/: ast_class.rst.txt  ast_functions.rst.txt  load_xml_doc.rst.txt  oxygen_xml.rst.txt
version/0.2/_sources/user_guide/: index.rst.txt  source_code.rst.txt
version/0.2/api/: ast_class.html  ast_functions.html  autogenerateddirectory.html  custom_functions.html  directory_format.html  download.html  load_xml_doc.html  oxygen_xml.html  writer.html
version/0.2/contributing/: index.html
version/0.2/getting_started/: index.html
version/0.2/user_guide/: announcement.html  index.html  objects.html  source_code.html
version/0.3/: genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
version/0.3/contributing/: index.html
version/0.3/getting_started/: index.html
version/0.3/user_guide/: objects.html  source_code.html
version/dev/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
version/dev/_sources/api/: index.rst.txt
version/dev/_sources/user_guide/: source_code.rst.txt
version/dev/_static/: search.json
version/dev/api/: ast_class.html  ast_functions.html  autogenerateddirectory.html  custom_functions.html  directory_format.html  download.html  index.html  load_xml_doc.html  oxygen_xml.html  writer.html
version/dev/contributing/: index.html
version/dev/getting_started/: index.html
version/dev/user_guide/: configuration.html  index.html  objects.html  source_code.html
version/stable/: genindex.html  index.html
version/stable/_sources/api/: index.rst.txt
version/stable/_sources/user_guide/: objects.rst.txt
version/stable/_static/: search.json
version/stable/api/: custom_functions.html  directory_format.html  index.html  writer.html
version/stable/contributing/: index.html
version/stable/user_guide/: index.html  source_code.html
(+8183 files in other folders)
