[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
# Check https://flit.readthedocs.io/en/latest/pyproject_toml.html for all available sections
name = "pyconverter-xml2py"
version = "0.3.dev0"
description = "PyConverter-XML2Py converter."
readme = "README.rst"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "ANSYS, Inc.", email = "pyansys.core@ansys.com"},
]
maintainers = [
    {name = "PyAnsys Core", email = "pyansys.core@ansys.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "click>=7.0,<9.0.0",
    "importlib-metadata>=4.0",
    "pygithub>=1.59.1",
    "lxml>=4.9.3",
    "numpy>=1.14.0,<1.25.0; python_version<'3.9'",
    "numpy>=1.14.0; python_version>='3.9'",
    "py-asciimath==0.3.0",
    "pylatexenc==2.10",
    "pyyaml>=5.1.0",
    "tqdm>=4.64.1",
    "black>=24.2.0",
    "regex>=2021.4.4",
]

[project.optional-dependencies]
tests = [
    "black>=24.2.0",
    "click==8.1.7",
    "pygithub==2.4.0",
    "lxml==5.3.0",
    "numpy==2.1.1",
    "parse==1.20.2",
    "pytest==8.3.2",
    "pytest-cov==5.0.0",
    "pytest-rerunfailures==14.0",
    "pyyaml==6.0.2",
    "regex==2024.7.24",
]
doc = [
    "Sphinx==8.0.2",
    "ansys-sphinx-theme[autoapi]==1.1.4",
    "build>= 0.10.0",
    "flit>=3.8.0",
    "jupyter_sphinx==0.5.3",
    "numpy==2.1.1",
    "numpydoc==1.8.0",
    "pandas==2.2.2",
    "parse==1.20.2",
    "pypandoc==1.13",
    "pytest-sphinx==0.6.3",
    "regex==2024.7.24",
    "sphinx-autobuild==2024.9.19",
    "sphinx-autodoc-typehints==2.4.4",
    "sphinx-copybutton==0.5.2",
    "sphinx-notfound-page==1.0.4",
    "sphinx-gallery==0.17.1",
]

[tool.flit.module]
name = "pyconverter.xml2py"

[project.urls]
Source = "https://github.com/ansys/pyconverter-xml2py/"
Tracker = "https://github.com/ansys/pyconverter-xml2py/issues"
Homepage = "https://github.com/ansys/pyconverter-xml2py"

[project.scripts]
pyconverter-xml2py = "pyconverter.xml2py.cli:main"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
force_sort_within_sections = true
line_length = 100
default_section = "THIRDPARTY"
src_paths = ["src"]

[tool.coverage.run]
source = ["scr"]

[tool.coverage.report]
show_missing = true
