[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
# Check https://flit.readthedocs.io/en/latest/pyproject_toml.html for all available sections
name = "pyconverter-xml2py"
version = "0.4.dev0"
description = "PyConverter-XML2Py converter."
readme = "README.rst"
requires-python = ">=3.10,<4"
license = {file = "LICENSE"}
authors = [
    {name = "ANSYS, Inc.", email = "pyansys.core@ansys.com"},
]
maintainers = [
    {name = "PyAnsys Core", email = "pyansys.core@ansys.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=7.0,<9.0.0",
    "importlib-metadata>=4.0",
    "pygithub>=1.59.1",
    "inflect>=7.0.0",
    "lxml>=4.9.3",
    "numpy>=1.14.0",
    "py-asciimath==0.3.0",
    "pylatexenc==2.10",
    "pyyaml>=5.1.0",
    "tqdm>=4.64.1",
    "black>=24.2.0",
    "regex>=2021.4.4",
]

[project.optional-dependencies]
tests = [
    "black>=24.2.0",
    "click==8.3.1",
    "inflect==7.5.0",
    "pygithub==2.8.1",
    "lxml==5.3.0",
    "numpy==2.2.6",
    "parse==1.20.2",
    "pytest==8.4.2",
    "pytest-cov==7.0.0",
    "pytest-rerunfailures==15.1",
    "pyyaml==6.0.3",
    "regex==2025.7.34",
]
doc = [
    "Sphinx==8.2.3",
    "ansys-sphinx-theme[autoapi]==1.5.3",
    "build>= 0.10.0",
    "flit>=3.8.0",
    "inflect==7.5.0",
    "jupyter_sphinx==0.5.3",
    "numpy==2.2.6",
    "numpydoc==1.8.0",
    "pandas==2.3.3",
    "parse==1.20.2",
    "pypandoc==1.16.2",
    "pytest-sphinx==0.6.3",
    "regex==2025.7.34",
    "sphinx-autobuild==2024.10.3",
    "sphinx-autodoc-typehints==3.2.0",
    "sphinx-copybutton==0.5.2",
    "sphinx-notfound-page==1.1.0",
    "sphinx-gallery==0.19.0",
]

[tool.flit.module]
name = "pyconverter.xml2py"

[project.urls]
Source = "https://github.com/ansys/pyconverter-xml2py/"
Tracker = "https://github.com/ansys/pyconverter-xml2py/issues"
Homepage = "https://github.com/ansys/pyconverter-xml2py"

[project.scripts]
pyconverter-xml2py = "pyconverter.xml2py.cli:main"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
force_sort_within_sections = true
line_length = 100
default_section = "THIRDPARTY"
src_paths = ["src"]

[tool.coverage.run]
source = ["scr"]

[tool.coverage.report]
show_missing = true
