[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
# Check https://flit.readthedocs.io/en/latest/pyproject_toml.html for all available sections
name = "pyconverter-generatedcommands"
version = "0.1.dev0"
description = "Documentation."
readme = "README.rst"
requires-python = ">=3.7"
license = {file = "LICENSE"}
authors = [
    {name = "ANSYS, Inc.", email = "pyansys.core@ansys.com"},
]
maintainers = [
    {name = "PyAnsys developers", email = "pyansys.maintainers@ansys.com"},
]

classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "importlib-metadata >=4.0",
    "flit>=3.8.0",
]

[project.optional-dependencies]
doc = [
    "Sphinx==7.2.5",
    "build>= 0.10.0",
    "jupyter_sphinx==0.4.0",
    "linuxdoc==20230827",
    "numpy==1.26.0",
    "numpydoc==1.5.0",
    "pandas==2.1.0",
    "parse==1.19.1",
    "pypandoc==1.11",
    "pytest-sphinx==0.5.0",
    "pydata_sphinx_theme==0.14.0",
    "sphinx-autobuild==2021.3.14",
    "sphinx-autodoc-typehints==1.24.0",
    "sphinx-copybutton==0.5.2",
    "sphinx-notfound-page==1.0.0",
    "sphinx-gallery==0.14.0",
]

[tool.flit.module]
name = "pyconverter.generatedcommands"

[project.urls]
Source = "https://github.com/ansys/pyconverter-xml2py/"
Tracker = "https://github.com/ansys/pyconverter-xml2py/issues"
Homepage = "https://github.com/ansyspyconverter-xml2py"


[tool.black]
line-length = 100

[tool.isort]
profile = "black"
force_sort_within_sections = true
line_length = 100
default_section = "THIRDPARTY"
src_paths = ["src"]

[tool.coverage.report]
show_missing = true