[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
# Check https://flit.readthedocs.io/en/latest/pyproject_toml.html for all available sections
name = "pyconverter-generatedcommands"
version = "0.1.dev0"
description = "Documentation."
readme = "README.rst"
requires-python = ">=3.10,<4"
license = {file = "LICENSE"}
authors = [
    {name = "ANSYS, Inc.", email = "pyansys.core@ansys.com"},
]
maintainers = [
    {name = "PyAnsys developers", email = "pyansys.maintainers@ansys.com"},
]

classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "importlib-metadata >=4.0",
    "flit>=3.8.0",
]

[project.optional-dependencies]
doc = [
    "Sphinx==9.1.0",
    "build>= 0.10.0",
    "jupyter_sphinx==0.5.3",
    "linuxdoc==20240924",
    "numpy==2.2.6",
    "numpydoc==1.10.0",
    "pandas==2.3.3",
    "parse==1.20.2",
    "pydata_sphinx_theme==0.16.1",
    "pypandoc==1.16",
    "pytest-sphinx==0.6.3",
    "pyyaml==6.0.3",
    "sphinx-autobuild==2024.10.3",
    "sphinx-autodoc-typehints==3.2.0",
    "sphinx-copybutton==0.5.2",
    "sphinx-notfound-page==1.1.0",
    "sphinx-gallery==0.19.0",
]
[tool.flit.module]
name = "pyconverter.generatedcommands"

[project.urls]
Source = "https://github.com/ansys/pyconverter-xml2py/"
Tracker = "https://github.com/ansys/pyconverter-xml2py/issues"
Homepage = "https://github.com/ansyspyconverter-xml2py"


[tool.black]
line-length = 100

[tool.isort]
profile = "black"
force_sort_within_sections = true
line_length = 100
default_section = "THIRDPARTY"
src_paths = ["src"]

[tool.coverage.report]
show_missing = true